# cppparsec

./: .clang-format  .gitignore  1  :w  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.md  Makefile  README.md  ]  cmake_install.cmake  flake.nix  todo.md  ⎈:w
.clangd/index/: cppparsec.h.45009D2CFD01716E.idx  test.cc.D0EE346C0D851FA4.idx
.github/workflows/: cmake.yml
cppparsec/: combinator.h  combinator.inl  common.h  core.h  cppparsec.h  error.h  language.h  permute.h  stream.h  token.h  utf8.h  util.h
demo/: CMakeLists.txt  calculator.cc  json.cc  json.h
demo/jsons/: basic  simple1.json  simple2.json  simple3.json  simple4.json
docs/: Doxyfile  conf.py  index.md  index.rst
docs/html/: annotated.html  classcppparsec_1_1bad__many__combinator-members.html  classcppparsec_1_1bad__many__combinator.html  classcppparsec_1_1parse__failed-members.html  classcppparsec_1_1parse__failed.html  classcppparsec_1_1parser-members.html  classcppparsec_1_1parser.html  classcppparsec_1_1parser__error-members.html  classcppparsec_1_1parser__error.html  classcppparsec_1_1reply-members.html  classcppparsec_1_1reply.html  classcppparsec_1_1stream_1_1string__state-members.html  classcppparsec_1_1stream_1_1string__state.html  classes.html  combinator_8h_source.html  core_8h_source.html  cppparsec_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  error_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  hierarchy.html  stream_8h_source.html  structcppparsec_1_1Conts-members.html  structcppparsec_1_1Conts.html  structcppparsec_1_1TokenParserS-members.html  structcppparsec_1_1TokenParserS.html  structcppparsec_1_1language__def__s-members.html  structcppparsec_1_1language__def__s.html  structcppparsec_1_1message__t-members.html  structcppparsec_1_1message__t.html  structcppparsec_1_1parser__trait.html  structcppparsec_1_1parser__trait_3_01parser_3_01S_00_01T_01_4_01_4-members.html  structcppparsec_1_1parser__trait_3_01parser_3_01S_00_01T_01_4_01_4.html  structcppparsec_1_1src__position-members.html  structcppparsec_1_1src__position.html  structcppparsec_1_1typechecker_1_1Product-members.html  structcppparsec_1_1typechecker_1_1Product.html  (+23 more)
docs/latex/: classcppparsec_1_1bad__many__combinator.eps  classcppparsec_1_1bad__many__combinator.tex  classcppparsec_1_1parse__failed.eps  classcppparsec_1_1parse__failed.tex  classcppparsec_1_1parser.tex  classcppparsec_1_1parser__error.tex  classcppparsec_1_1reply.tex  classcppparsec_1_1stream_1_1string__state.tex  hierarchy.tex  refman.tex  structcppparsec_1_1Conts.tex  structcppparsec_1_1TokenParserS.tex  structcppparsec_1_1language__def__s.tex  structcppparsec_1_1message__t.tex  structcppparsec_1_1parser__trait.tex  structcppparsec_1_1parser__trait_3_01parser_3_01S_00_01T_01_4_01_4.tex  structcppparsec_1_1src__position.tex  structcppparsec_1_1typechecker_1_1Product.tex  structcppparsec_1_1typechecker_1_1ProductTypes.tex  structcppparsec_1_1typechecker_1_1Sum.tex  (+10 more)
example/: calculator.cc  json.cc
fuzzer/: CMakeLists.txt  fuzz_stream.cc
html/: annotated.html  classcppparsec_1_1bad__many__combinator-members.html  classcppparsec_1_1bad__many__combinator.html  classcppparsec_1_1parse__failed-members.html  classcppparsec_1_1parse__failed.html  classcppparsec_1_1parser-members.html  classcppparsec_1_1parser.html  classcppparsec_1_1parser__error-members.html  classcppparsec_1_1parser__error.html  classcppparsec_1_1reply-members.html  classcppparsec_1_1reply.html  classcppparsec_1_1stream_1_1string__state-members.html  classcppparsec_1_1stream_1_1string__state.html  classes.html  combinator_8h_source.html  core_8h_source.html  cppparsec_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  error_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  hierarchy.html  index.html  md_LICENSE.html  md_README.html  md_todo.html  pages.html  stream_8h_source.html  structcppparsec_1_1Conts-members.html  structcppparsec_1_1Conts.html  structcppparsec_1_1TokenParserS-members.html  structcppparsec_1_1TokenParserS.html  structcppparsec_1_1language__def__s-members.html  structcppparsec_1_1language__def__s.html  structcppparsec_1_1message__t-members.html  structcppparsec_1_1message__t.html  structcppparsec_1_1parser__trait.html  structcppparsec_1_1parser__trait_3_01parser_3_01S_00_01T_01_4_01_4-members.html  (+28 more)
html/search/: all_0.js  (+22 more)
include/: .gdb_history  a  combinator.h  core.h  cppparsec.h  error.h  parser.h  parser_.h  parser__.h  stream.h  test.cc  token.h  typecheck.h  util.h
latex/: annotated.tex  classcppparsec_1_1bad__many__combinator.tex  classcppparsec_1_1parse__failed.tex  classcppparsec_1_1parser.tex  classcppparsec_1_1parser__error.tex  classcppparsec_1_1reply.tex  classcppparsec_1_1stream_1_1string__state.tex  md_LICENSE.tex  md_README.tex  md_todo.tex  refman.tex  structcppparsec_1_1Conts.tex  structcppparsec_1_1TokenParserS.tex  structcppparsec_1_1language__def__s.tex  structcppparsec_1_1message__t.tex  structcppparsec_1_1parser__trait.tex  structcppparsec_1_1parser__trait_3_01parser_3_01S_00_01T_01_4_01_4.tex  structcppparsec_1_1src__position.tex  structcppparsec_1_1typechecker_1_1Product.tex  structcppparsec_1_1typechecker_1_1ProductTypes.tex  structcppparsec_1_1typechecker_1_1Product_3_01ProductTypes_3_01Ts_8_8_8_01_4_00_01Us_8_8_8_01_4.tex  structcppparsec_1_1typechecker_1_1Sum.tex  structcppparsec_1_1typechecker_1_1SumTypes.tex  structcppparsec_1_1typechecker_1_1SumTypesPrim.tex  structcppparsec_1_1typechecker_1_1Sum_3_01SumTypes_3_01Ts_8_8_8_01_4_00_01Sub_01_4.tex  structcppparsec_1_1unit.tex  structcppparsec_1_1util_1_1function__traits.tex  structcppparsec_1_1util_1_1function__traits__impl.tex  structcppparsec_1_1util_1_1function__traits__impl_3_01Ret_07Class_1_1_5_08_07Args_8_8_8_08_01const_01_4.tex  structcppparsec_1_1util_1_1parameter__pack.tex
test/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.in  Makefile  cmake_install.cmake  test.cc  test.cpp  test_combinator.cc  test_core.cc  test_errorhandling.cc  tests.cc
unittests/: CMakeLists.txt  test.cc
(+36 files in other folders)
